--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Jekyll Portfolio Configuration
 title: "Pranay Palem - Robotics Engineer & AI Researcher"
 description: "Portfolio of Pranay Palem - Robotics Engineer with expertise in AI/ML, ROS 2, and autonomous systems"
-baseurl: ""
+baseurl: "/portfolio"
 url: "https://pranaypalem.github.io"
 
 # Build settings
